# cipher-nest

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/client/src/cmd/: authenticate_cmd.rs  get_password_cmd.rs  mod.rs  new_key_cmd.rs  register_cmd.rs  save_password_cmd.rs
crates/encryption/: Cargo.toml
crates/encryption/src/: key.rs  lib.rs  salt.rs
crates/server/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: db_storage.rs  file_storage.rs  key_manager.rs  keyring_storage.rs  lib.rs
crates/storage/src/model/: mod.rs  password.rs  tenant.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/zkp/: Cargo.toml  README.md
crates/zkp/src/: ecc_chaum_pedersen.rs  lib.rs
