[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["full"] }

sha2 = "0.10.7"

serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"

rand = "0.8.5"
rand_core = "0.6.4"
anyhow = "1.0.75"
log = "0.4.0"
pretty_env_logger = "0.4.0"