[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
sha2.workspace = true
rand.workspace = true
rand_core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
types = { path = "../types", version = "0.1.0" }

# Crypto
pbkdf2 = { version = "0.12", features = ["simple"] }
chacha20poly1305 = "0.10.1"
hex = "0.4.3"