[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Workspace
tokio.workspace = true
storage = { path = "../storage", version = "0.1.0" }
encryption = { path = "../encryption", version = "0.1.0" }

nickel = "0.11.0"
log = "0.4.0"
pretty_env_logger = "0.5.0"
