[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
encryption = { path = "../encryption", version = "0.1.0" }
types = { path = "../types", version = "0.1.0" }
zkp = { path = "../zkp", version = "0.1.0" }

async-trait = "0.1.73"
dirs = "5.0.1"
mongodb = "2.6.1"
keyring = "2.0.5"
hex = "0.4.3"