[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_core.workspace = true

num-bigint = { version = "0.4.4", features = ["rand"] }
curve25519-dalek = { version = "4.0.0", features = ["digest", "rand_core", "serde"] }
sha2 = "0.10.7"
lazy_static = "1.4.0"